<resources>
    <string name="app_name">IUM Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_nameAndsurname">Guest</string>
    <!--<string name="nav_header_email"></string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu Drawer-->
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>

    <!--Login Fragment-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>

    <!--Home Fragment-->
    <string name="welcome_user">Hi, Guest</string>
    <string name="download_data_for_the_first_time">Download Data for the first Time</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>

    <!--Courses List Item-->
    <string name="book">BOOK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="email">mario.rossi@email.com</string>
    <string name="re_type_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>

    <!--Booked Repetitions-->
    <string name="my_reservations">My Reservations</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="cancelled">Cancelled</string>
    <string name="susteined">Susteined</string>

    <!-- HomeFragment.java -->
    <string name="select_teacher">Select Teacher</string>
    <string name="select_course">Select Course</string>

    <!-- Main Activity.java -->
    <string name="connection">Connection&#8230;</string>
    <string name="session_expired">SESSION EXPIRED</string>
    <string name="logout_success">LOGOUT DONE SUCCESSFULLY</string>

    <!-- BookedFragment.java, HomeFragment.java, LoginFragment.java, RegistrationFragment.java -->
    <string name="no_db_connection">NO DATABASE CONNECTION</string>

    <!-- RegistrationFragment.java -->
    <string name="registration_failed">Registration failed! Try Again!</string>
    <string name="duplicate_email">Email already exists!</string>

    <!-- LoginFragment.java -->
    <string name="login_failed_fragment">Login Failed! Try Again</string>


</resources>